# agent-a2ui-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  inventory.json  pyproject.toml  template-inventory.json  text-inventory.json  working_inventory.json
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
app/: __init__.py  a2ui_examples.py  a2ui_schema.py  agent.py  agent_executor.py  config.py  deploy.sh  main.py  prompts.py  session_keys.py  sub_agents.py  tools.py  workspace_tools.py
app/app_utils/: telemetry.py  typing.py
app/catalog_schemas/0.8/: a2ui_demo_catalog_definition.json  restaurant_finder_catalog_definition.json
app/catalog_schemas/0.9/: a2ui_demo_catalog_definition.json  restaurant_finder_catalog_definition.json
app/fixtures/: q1_2026_whitepaper.json
app/skills/presentation-skill/: README.md  SKILL.md  requirements.txt
app/skills/restaurant-finder-overrides/: SKILL.md
deployment/terraform/: build_triggers.tf  gemini_enterprise.tf  github.tf  iam.tf  locals.tf  outputs.tf  service.tf  service_outputs.tf  storage.tf  variables.tf
deployment/terraform/dev/: apis.tf  gemini_enterprise.tf  iam.tf  service.tf  service_outputs.tf  variables.tf
deployment/terraform/vars/: env.tfvars.example
docs/: a2ui_references.md  auth.md  blog.md  comparison.md  ge_a2ui_integration_guide.md  how_schema_manager_work.md  implementation_details_guide.md  intro_a2ui.md  sdd.md  skills.md  skills_implementation.md  slide.md  system_diagram.md
frontend/: index.html  package-lock.json  package.json  test.html  tsconfig.json  vite.config.ts
frontend/src/: app.ts  chart-component.ts  client.ts  data-grid-component.ts  google-map-component.ts  iframe-component.ts  test-standalone.ts  vega-chart-component.ts
ge_a2ui_demo/: BUILD  README.md  a2ui-composer.scss  a2ui-composer.ts  a2ui-gallery.scss  a2ui-gallery.ts  a2ui-standard-components.scss  a2ui-standard-components.ts  a2ui-surface-container.ts  component_data.ts  demo-dialog.scss  demo-dialog.ts  demo-slide-out.scss  demo-slide-out.ts  gallery_data.ts  index.html  index.ts  raindrop-html.ts  schema-validator.ts  settings.ts  site.scss  types.ts
ge_custom_components/: BUILD  index.ts
ge_custom_components/data_grid/: BUILD  data-grid.scss  data-grid.ts  data_grid_number_formatting.ts  data_grid_schema.ts  data_grid_type_utilities.ts  data_grid_utilities.ts
ge_custom_components/product_selection/: BUILD  product-selection.scss  product-selection.ts
ge_custom_components/vega_chart/: BUILD  vega-chart.scss  vega-chart.ts  vega-chart_harness.ts  vega-chart_test.ts
ge_custom_components/web_frame/: BUILD  web-frame-srcdoc.ts  web-frame-url.ts  web-frame_test.ts
ge_custom_components/web_frame/shared/: BUILD  security-error.ts
lit_internal/: README.md
tests/eval/evalsets/: basic.evalset.json
tests/integration/: agent_test.py  main_e2e_test.py  remote_e2e_test.py  server_e2e_test.py
tests/integration/fixtures/: mock_restaurants.json
tests/load_test/: README.md  load_test.py
tests/unit/: agent_card_test.py  agent_executor_test.py  tools_test.py  workspace_tools_test.py
(+124 files in other folders)
