[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "nest-asyncio>=1.6.0,<2.0.0",
  "locust>=2.43.4"
]

[project]
name = "agent-a2ui-demo"
version = "0.1.0"
description = ""
authors = [
  {name = "Your Name", email = "your@email.com"}
]
dependencies = [
  "google-adk>=1.16.0,<2.0.0",
  "a2a-sdk~=0.3.22",
  "nest-asyncio>=1.6.0,<2.0.0",
  "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
  "gcsfs>=2024.11.0",
  "google-cloud-logging>=3.12.0,<4.0.0",
  "google-cloud-aiplatform[evaluation]>=1.130.0",
  "fastapi>=0.115.8,<1.0.0",
  "uvicorn~=0.34.0",
  "asyncpg>=0.30.0,<1.0.0",
  "google-generativeai>=0.8.6",
  "a2ui-agent-sdk>=0.1.1",
  "pre-commit>=4.5.1",
  "gh>=0.0.4"
]
requires-python = ">=3.10,<3.14"

[project.optional-dependencies]
jupyter = [
  "jupyter>=1.0.0,<2.0.0"
]
eval = [
  "google-adk[eval]>=1.15.0,<2.0.0"
]
lint = [
  "ruff>=0.4.6,<1.0.0",
  "ty>=0.0.1a0",
  "codespell>=2.2.0,<3.0.0"
]

[tool.agent-starter-pack]
# Generation metadata - enables CLI commands to understand project context
# These fields allow any generated project to work as a remote template
name = "agent-a2ui-demo"
description = "ReAct agent with A2A protocol [experimental]"
base_template = "adk_a2a"
agent_directory = "app"
# Generation context
generated_at = "2026-03-30T22:52:39.068034+00:00"
asp_version = "0.41.1"

[tool.agent-starter-pack.create_params]
# Parameters used during project creation
deployment_target = "cloud_run"
session_type = "in_memory"
cicd_runner = "google_cloud_build"
include_data_ingestion = false
datastore = "none"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/*.ipynb,**/package-lock.json"

[tool.hatch.build.targets.wheel]
packages = ["app", "frontend"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
# Exclude load tests from pytest discovery — locust's gevent monkey-patching
# causes RecursionError when pytest tries to collect these files.
# Run load tests via the locust CLI instead.
norecursedirs = ["tests/load_test"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "W", # pycodestyle warnings
  "I", # isort
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
  "UP", # pyupgrade
  "RUF" # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend"]

[tool.ty]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.ty.src]
exclude = [".venv/**"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
